# TheOneRing

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
the_one_ring/: CMakeLists.txt  package.xml
the_one_ring/cmake/: CodeCoverage.cmake  Doxygen.cmake  Sanitizers.cmake
the_one_ring/include/: app_setup.h  constants.h  internal_signal.h  logger.h  logger_setup.h
the_one_ring/src/: main.cc
the_one_ring/tests/: CMakeLists.txt  smoke_test.cc
tor/: CMakeLists.txt  package.xml
tor/cmake/: CodeCoverage.cmake
tor/include/: app_setup.h  app_timer.h  constants.h  internal_signal.h  logger_setup.h  thread_setup.h
tor/src/: app_setup.cc  app_timer.cc  logger_setup.cc  main.cc  thread_setup.cc
tor/tests/: CMakeLists.txt  smoke_test.cc
