<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>the_one_ring</name>
  <version>0.0.0</version>
  <description>Handcrafted algorithm for 4000Hz cycle frequency (250 us) timer, on tuned PREEMPT_RT Linux Ubuntu 24.04, using C++20 features, meant for real-time robotic control applications.</description>
  <maintainer email="kumar.v.cube98@gmail.com">Kumar Ramesh</maintainer>
  <license>BSD 3-Clause License</license>

  <buildtool_depend>cmake</buildtool_depend>
</package>
